kubernetes/digimon/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: digimon
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
